--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "plotly.js": "^3.0.1",
     "react": "^19.1.0",
