--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,11 +13,8 @@ xlrd==2.0.1
 
 # Machine Learning
 scikit-learn==1.3.2
-xgboost==2.0.2
-lightgbm==4.1.0
-catboost==1.2.2
-statsmodels==0.14.0
 scipy==1.11.4
+joblib==1.3.2
 
 # Deep Learning (optional)
 # tensorflow==2.15.0
@@ -25,16 +22,10 @@ scipy==1.11.4
 
 # NLP
 nltk==3.8.1
-spacy==3.7.2
-textblob==0.17.1
-wordcloud==1.9.2
-gensim==4.3.2
-transformers==4.35.2
 
 # Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
 plotly==5.18.0
+kaleido==0.2.1
 
 # Firebase & Authentication
 firebase-admin==6.3.0
@@ -44,7 +35,6 @@ google-cloud-firestore==2.13.1
 stripe==7.6.0
 
 # Security & Validation
-python-magic==0.4.27
 email-validator==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
@@ -52,54 +42,21 @@ cryptography==41.0.7
 
 # Rate Limiting & Caching
 slowapi==0.1.9
-redis==5.0.1
-aiocache==0.12.2
 
-# Monitoring & Performance
-psutil==5.9.6
-prometheus-client==0.19.0
-structlog==23.2.0
-
-# WebSocket Support
+# WebSocket Support  
 python-socketio==5.10.0
-websocket-client==1.6.4
 
-# Background Tasks
-celery==5.3.4
-flower==2.0.1
+# Monitoring
+psutil==5.9.6
 
-# Email
-aiosmtplib==3.0.1
-
-# Development & Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
-
-# Deployment
-gunicorn==21.2.0
-supervisor==4.2.5
-
-# CrewAI Dependencies (if using)
+# AI/LLM Support (for assessments)
+openai>=1.13.3
 crewai==0.16.0
 crewai-tools==0.1.0
 langchain==0.0.340
 langchain-openai==0.0.5
+langchain-community==0.0.13
 
-# Additional ML Tools
-imbalanced-learn==0.11.0
-shap==0.43.0
-eli5==0.13.0
-yellowbrick==1.5
-
-# Data Validation
-pandera==0.17.2
-great-expectations==0.18.3
-
-# API Documentation
-fastapi-users==12.1.2
-fastapi-limiter==0.1.5
-fastapi-cache2==0.2.1
+# Additional
+aiofiles==23.2.1
+kneed==0.8.5
