--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "zustand": "^5.0.6"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "react-scripts start",
     "build": "craco build",
     "test": "craco test",
     "analyze": "ANALYZE_BUNDLE=true craco build",
