Add python-magic dependency back to requirements.txt
- python-magic is required by security_utils.py for MIME type detection
- This was accidentally removed during dependency cleanup
- Fixes ImportError: No module named 'magic'

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,3 +61,6 @@ langchain-community
 # Additional
 aiofiles==23.2.1
 kneed==0.8.5
+
+# File type detection (required by security_utils.py)
+python-magic==0.4.27
